Code to test compatibility of ML and League code

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 
 # Data files and other university policies (available in League code)
 data/
+sample_data/
 policies/
 
 # Environments
